# tree

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Sanitizers.cmake  avl_test_report.txt  build.ps1  build.sh  build_test.ps1  report.txt
benchmarks/: CMakeLists.txt
benchmarks/source/: AVLTreeBench.cpp  AVLTreeCBench.cpp  AVLTreeGenericBench.cpp  AVLTreeGenericRecursiveBench.cpp  FlatAVLTreeGenericBench.cpp  StdSetBench.cpp  StdUnorderedMapBench.cpp  UnorderedMapBench.cpp  main.cpp
include/tree/: AVLTreeImpl.hpp
include/tree/C/: compare_func.h  op_result.h  print_func.h  queue.h  stack.h  treelib_api.h  treelib_extern.h
include/tree/internal/: AVLTreeGeneric.hpp  AVLTreeGeneric.tpp  AVLTreeRotateState.hpp  binaryTreeGeneric.hpp
scripts/: benchmark_parallel.ps1  graphbench.py  result.txt  results_avltree_c_generic.json  results_avltree_cpp.json  results_avltree_cpp_generic.json  results_avltree_cpp_generic_recursive.json  results_std_set_generic.json  results_std_unordered_set.json  setupvenv.py  venv.ps1  venv.sh
scripts/data/: results_AVLTreeBench.json  results_AVLTreeCBench.json  results_AVLTreeGenericBench.json  results_AVLTreeGenericRecursiveBench.json  results_FlatAVLTreeGenericBench.json  results_StdSetBench.json  results_StdUnorderedMapBench.json
source/C/: avl_tree.c  binary_tree.c  stack.c
tests/: AVLTreeinline.hpp  CMakeLists.txt  CMakeListsCMocka.cmake  CMakeListsGTest.cmake  CMakeLists_old.txt
tests/include/: AVLTreeCTest.h  AVLTreeGenericRecursiveTest.hpp  AVLTreeGenericTest.hpp  AVLTreeTest.hpp  FlatAVLTreeGenericTest.hpp  QueueTest.h  StackTest.h  VectorTest.h
tests/source/: AVLTree.cpp  AVLTree.hpp  AVLTreeBench.cpp  AVLTreeCTest.c  AVLTreeGenericRecursiveTest.cpp  AVLTreeGenericTest.cpp  AVLTreeTest.cpp  AVLTreeTest.hpp  FlatAVLTreeGenericTest.cpp  QueueTest.c  StackTest.c  VectorTest.c  binaryTree.cpp  binaryTree.hpp  binaryTreePrettyPrint.cpp  binaryTreePrettyPrint.hpp  main.c  main.cpp
tree/: CMakeLists.txt
tree/include/tmp/: AVLTreeDraft.hpp  binaryTreeDraft.hpp
tree/include/tree/: AVLTree.hpp  FlatAVLTree.hpp  FlatAVLTreeImpl.hpp  avl_tree.hpp  binaryTree.hpp  binary_tree.hpp
tree/include/tree/C/: avl_tree.h  binary_tree.h  compare_func.h  dynamic_pool.h  op_result.h  print_func.h  queue.h  stack.h  treelib_api.h  vector.h
tree/include/tree/internal/: AVLTreeGeneric.hpp  AVLTreeGeneric.tpp  FlatAVLTreeGeneric.hpp  FlatAVLTreeGeneric.tpp  FlatAVLTreeGenericIterators.hpp  FlatBinaryTree.hpp  FlatBinaryTree.tpp  binaryTreeGeneric.hpp  binaryTreeGeneric.tpp  bitmap.hpp  nodeMetadata.hpp  treelib_util.hpp
tree/source/: AVLTree.cpp  Compiler Explorer Code.cpp  avl_tree.cpp  binaryTree.cpp  draft_from_compiler_explorer.cpp.txt
tree/source/tmp/: AVLTreeDraft.cpp  binaryTreeDraft.cpp
tree/source/tree/C/: avl_tree.c  binary_tree.c  dynamic_pool.c  queue.c  stack.c  vector.c
tree/source/tree/internal/: bitmap.cpp
treeold/include/tree/: avl_tree.hpp  avl_tree2.hpp
treeold/source/: avl_tree2.cpp  notes.txt
